Update 1.2 Setting Up Your Environment for OCI and Terraform.md

--- a/Module-1/1.2 Setting Up Your Environment for OCI and Terraform.md
+++ b/Module-1/1.2 Setting Up Your Environment for OCI and Terraform.md
@@ -17,12 +17,11 @@ In this guide, we'll walk you through the steps to set up your environment for u
 
 ## Steps
 
-1. **Create a Directory:** Create a new directory for your Terraform project if you haven't already. You can name it anything you like.
+1. **Create a Directory:** Create a new directory for your Terraform project if you haven't already. You can name it anything you like. (You can create directory on  Cloud Shell)
 
 2. **Navigate to the Directory:** Open a terminal and navigate to the directory you just created using the `cd` command.
 
-3. **Create `provider.tf` File:** Inside your project directory, create a file named `provider.tf` using a text editor of your choice. You can use the command-line or a graphical text editor.
-
+3. **Create `provider.tf` File:** Inside your project directory, create or upload a file named `provider.tf` on cloud shell using a text editor of your choice. 
 4. **Add Provider Configuration:**
 
    Copy and paste the following content into your `provider.tf` file:
