Update 1.1 Create a VCN with Public Subnet.md

--- a/Module-2/1.1 Create a VCN with Public Subnet.md
+++ b/Module-2/1.1 Create a VCN with Public Subnet.md
@@ -15,9 +15,9 @@ mkdir ~/createvcn
 ### 3. Create Configuration Files
 Create two files `provider.tf` and `network.tf` to define your Terraform configuration. You can either use your local machine's text editor or the OCI Cloud Editor to create these files.
 
-#### `provider.tf`
+[#### `provider.tf`]((Module-2/provider.tf)
 
-#### `network.tf`
+[#### `network.tf`](Module-2/network.tf)
 
 
 ### 4. Upload Files
