Update 1.1 Create a VCN with Public Subnet.md

--- a/Module-2/1.1 Create a VCN with Public Subnet.md
+++ b/Module-2/1.1 Create a VCN with Public Subnet.md
@@ -17,7 +17,7 @@ Create two files `provider.tf` and `network.tf` to define your Terraform configu
 
 #### [`provider.tf`]((Module-2/provider.tf)
 
-#### [`network.tf`]([Module-2/network.tf](https://github.com/saurabhterna/terraform-oci/blob/1cd9bbf1bd3b48a37087302420caeb64f80510a6/Module-2/network.tf))
+#### [`network.tf`](https://github.com/saurabhterna/terraform-oci/blob/1cd9bbf1bd3b48a37087302420caeb64f80510a6/Module-2/network.tf)
 
 
 ### 4. Upload Files
