--- a/Module-2/1.1 Create a VCN with Public Subnet.md
+++ b/Module-2/1.1 Create a VCN with Public Subnet.md
@@ -15,7 +15,7 @@ mkdir ~/createvcn
 ### 3. Create Configuration Files
 Create two files `provider.tf` and `network.tf` to define your Terraform configuration. You can either use your local machine's text editor or the OCI Cloud Editor to create these files.
 
-#### [`provider.tf`]((Module-2/provider.tf)
+#### [`provider.tf`](https://github.com/saurabhterna/terraform-oci/blob/1cd9bbf1bd3b48a37087302420caeb64f80510a6/Module-2/provider.tf)
 
 #### [`network.tf`](https://github.com/saurabhterna/terraform-oci/blob/1cd9bbf1bd3b48a37087302420caeb64f80510a6/Module-2/network.tf)
 
