Update 1.2 Explanation of create2webserver.tf.md

--- a/Module-2/2. Create-Compute/1.2 Explanation of create2webserver.tf.md
+++ b/Module-2/2. Create-Compute/1.2 Explanation of create2webserver.tf.md
@@ -1,5 +1,5 @@
 
-## Terraform Configuration for Creating Compute Instances and Configuring Web Servers
+## Explanation for create2webserver.tf
 
 ### Variables
 
