Update 1.1 Create a VCN with Public Subnet.md

--- a/Module-2/1. Create-VCN/1.1 Create a VCN with Public Subnet.md
+++ b/Module-2/1. Create-VCN/1.1 Create a VCN with Public Subnet.md
@@ -19,7 +19,8 @@ Create two files `provider.tf` and `network.tf` to define your Terraform configu
 
 #### [`network.tf`](https://github.com/saurabhterna/terraform-oci/blob/1cd9bbf1bd3b48a37087302420caeb64f80510a6/Module-2/network.tf)
 
-
+Replace the values with your actual OCI credentials and configuration. Also update Compartment OCID in network.tf
+ 
 ### 4. Upload Files
 
 Upload the `provider.tf` and `network.tf` files that you've created to the `createvcn` directory in your Cloud Shell environment.
