Update 1.1 Creating Two Web Servers in OCI using Terraform.md

--- a/Module-2/2. Create-Compute/1.1 Creating Two Web Servers in OCI using Terraform.md
+++ b/Module-2/2. Create-Compute/1.1 Creating Two Web Servers in OCI using Terraform.md
@@ -29,6 +29,9 @@ This guide will walk you through the process of creating two Apache web servers 
      git clone <repository-url>
      ```
      Replace `<repository-url>` with the actual URL of the GitHub repository.
+     
+     Replace the values with your actual OCI credentials and configuration. Also update Compartment OCID in network.tf
+
 
 2. **Initialize Terraform:**
    - Run the following commands:
