Update 1.1 Creating Two Web Servers in OCI using Terraform.md

--- a/Module-2/2. Create-Compute/1.1 Creating Two Web Servers in OCI using Terraform.md
+++ b/Module-2/2. Create-Compute/1.1 Creating Two Web Servers in OCI using Terraform.md
@@ -3,6 +3,8 @@
 
 This guide will walk you through the process of creating two Apache web servers in Oracle Cloud Infrastructure (OCI) using Terraform. The web servers will be deployed in a public subnet within a Virtual Cloud Network (VCN).
 
+![image](https://github.com/saurabhterna/terraform-oci/assets/29796697/2c470ad1-1fd1-4577-a5aa-87a538b6bb74)
+
 ## Prerequisites
 
 1. **Generate RSA Keys:**
